[[bin]]
name = "zeitgeist"
path = "./src/main.rs"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
pallet-asset-tx-payment = { workspace = true, features = ["default"] }
pallet-transaction-payment = { workspace = true, features = ["default"] }
pallet-transaction-payment-rpc = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, features = ["default"] }
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-network-statement = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-storage-monitor = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true, features = ["default"] }
sp-block-builder = { workspace = true, features = ["default"] }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true, features = ["default"] }
sp-genesis-builder = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["default"] }
sp-io = { workspace = true, features = ["default"] }
sp-keyring = { workspace = true }
sp-offchain = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }
sp-session = { workspace = true, features = ["default"] }
sp-storage = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true, features = ["default"] }
sp-trie = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# Benchmark

frame-benchmarking = { workspace = true, features = ["default"], optional = true }
frame-benchmarking-cli = { workspace = true }
frame-metadata-hash-extension = { workspace = true }

# Cumulus

cumulus-client-cli = { workspace = true, optional = true }
cumulus-client-collator = { workspace = true, optional = true }
cumulus-client-consensus-common = { workspace = true, optional = true }
cumulus-client-consensus-proposer = { workspace = true, optional = true }
cumulus-client-consensus-relay-chain = { workspace = true, optional = true }
cumulus-client-network = { workspace = true, optional = true }
cumulus-client-service = { workspace = true, optional = true }
cumulus-primitives-core = { workspace = true, features = ["default"], optional = true }
cumulus-primitives-parachain-inherent = { workspace = true, optional = true }
cumulus-relay-chain-inprocess-interface = { workspace = true, optional = true }
cumulus-relay-chain-interface = { workspace = true, optional = true }
cumulus-relay-chain-minimal-node = { workspace = true, optional = true }
cumulus-relay-chain-rpc-interface = { workspace = true, optional = true }

# Parachain

async-backing-primitives = { workspace = true, optional = true }
moonbeam-vrf = { workspace = true, optional = true }
nimbus-consensus = { workspace = true, optional = true }
nimbus-primitives = { workspace = true, features = ["default"], optional = true }
pallet-author-inherent = { workspace = true, features = ["default"], optional = true }
pallet-parachain-staking = { workspace = true, features = ["default"], optional = true }
parity-scale-codec = { workspace = true, features = ["default"], optional = true }
sc-chain-spec = { workspace = true, optional = true }
sc-network-sync = { workspace = true, optional = true }
sc-tracing = { workspace = true, optional = true }
serde = { workspace = true, features = ["default"], optional = true }
serde_json = { workspace = true }
session-keys-primitives = { workspace = true, features = ["default"], optional = true }
sp-keystore = { workspace = true, optional = true }
substrate-prometheus-endpoint = { workspace = true, optional = true }

# Polkadot

polkadot-cli = { workspace = true, optional = true }
polkadot-parachain-primitives = { workspace = true, features = ["default"], optional = true }
polkadot-primitives = { workspace = true, features = ["default"], optional = true }
polkadot-service = { workspace = true, optional = true }

# Standalone

sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["default"] }

# Utility
cfg-if = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap-num = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
hex-literal = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
log = { workspace = true }
url = { workspace = true }

# Zeitgeist

battery-station-runtime = { workspace = true, optional = true }
zeitgeist-primitives = { workspace = true, features = ["default"] }
zeitgeist-runtime = { workspace = true, optional = true }
zrml-swaps-rpc = { workspace = true }

[features]
default = ["with-battery-station-runtime", "with-zeitgeist-runtime"]
metadata-hash = [
    "battery-station-runtime?/metadata-hash",
    "zeitgeist-runtime?/metadata-hash",
]
parachain = [
    "battery-station-runtime?/parachain",
    "zeitgeist-runtime?/parachain",

    # Cumulus

    "cumulus-client-cli",
    "cumulus-client-collator",
    "cumulus-client-consensus-common",
    "cumulus-client-consensus-proposer",
    "cumulus-client-consensus-relay-chain",
    "cumulus-client-network",
    "cumulus-client-service",
    "cumulus-primitives-core",
    "cumulus-primitives-parachain-inherent",
    "cumulus-relay-chain-inprocess-interface",
    "cumulus-relay-chain-interface",
    "cumulus-relay-chain-rpc-interface",
    "cumulus-relay-chain-minimal-node",


    # Parachain

    "async-backing-primitives",
    "moonbeam-vrf",
    "nimbus-consensus",
    "nimbus-primitives",
    "pallet-author-inherent",
    "pallet-parachain-staking",
    "parity-scale-codec",
    "session-keys-primitives",
    "sc-chain-spec",
    "sc-network-sync",
    "sc-tracing",
    "serde",
    "sp-keystore",
    "substrate-prometheus-endpoint",

    # Polkadot

    "polkadot-cli",
    "polkadot-parachain-primitives",
    "polkadot-primitives",
    "polkadot-service",
]
runtime-benchmarks = [
    "battery-station-runtime?/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-benchmarking-cli/runtime-benchmarks",
    "polkadot-cli?/runtime-benchmarks",
    "polkadot-service?/runtime-benchmarks",
    "zeitgeist-runtime?/runtime-benchmarks",
]
try-runtime = [
    "battery-station-runtime?/try-runtime",
    "zeitgeist-runtime?/try-runtime",
]
with-battery-station-runtime = ["battery-station-runtime"]
with-zeitgeist-runtime = ["zeitgeist-runtime"]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
build = "build.rs"
description = "An evolving blockchain for prediction markets and futarchy."
edition.workspace = true
homepage = "https://zeitgeist.pm"
name = "zeitgeist-node"
version = "0.6.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
