[dependencies]
arbitrary = { default-features = false, optional = true, version = "1.0" }
frame-support = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/purestake/substrate" }
frame-system = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/purestake/substrate" }
orml-currencies = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/purestake/open-runtime-module-library" }
orml-tokens = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/purestake/open-runtime-module-library" }
orml-traits = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/purestake/open-runtime-module-library" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { default-features = false, features = ["derive"], optional = true, version = "1.0.137" }
sp-core = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/purestake/substrate" }
sp-runtime = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/purestake/substrate" }

[dev-dependencies]
test-case = "2.0.2"

[features]
default = ["std"]
mock = []
std = [
    "frame-support/std",
    "frame-system/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "serde",
    "sp-core/std",
    "sp-runtime/std",
]
with-global-disputes = []

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zeitgeist-primitives"
version = "0.3.6"
