[dependencies]
arbitrary = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }
orml-traits = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }

[features]
default = ["std"]
mock = []
std = [
    "frame-support/std",
    "frame-system/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "serde/std",
    "sp-core/std",
    "sp-runtime/std",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zeitgeist-primitives"
version = "0.3.11"
