[dependencies]
arbitrary = { workspace = true, optional = true }
fixed = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
num-traits = { workspace = true }
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }
orml-traits = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive", "serde"] }
serde = { workspace = true, features = ["alloc", "derive", "rc"] }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
more-asserts = { workspace = true }
test-case = { workspace = true }
typenum = { workspace = true }

[features]
default = ["std"]
mock = []
runtime-benchmarks = []
std = [
    "frame-support/std",
    "frame-system/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "serde/std",
    "sp-core/std",
    "sp-runtime/std",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition.workspace = true
name = "zeitgeist-primitives"
version = "0.5.5"
