[build-dependencies]
substrate-wasm-builder = { branch = "polkadot-v0.9.4", git = "https://github.com/paritytech/substrate" }

[dependencies]
frame-executive = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
orml-currencies = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
pallet-balances = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-sudo = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
parity-scale-codec = { default-features = false, features = ["derive"], version = "2.0" }
sp-api = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-offchain = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }

# Benchmark

frame-benchmarking = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate", optional = true, version = "3.1.0" }
frame-system-benchmarking = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate", optional = true, version = "3.0" }
hex-literal = { default-features = false, optional = true, version = "0.3" }

# Cumulus

cumulus-pallet-dmp-queue = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-pallet-parachain-system = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-pallet-xcm = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-pallet-xcmp-queue = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-ping = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-primitives-core = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-primitives-utility = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
parachain-info = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }

# Parachain

nimbus-primitives = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
pallet-author-inherent = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
pallet-author-mapping = { branch = "master", default-features = false, git = "https://github.com/PureStake/moonbeam", optional = true }
pallet-author-slot-filter = { branch = "nimbus-polkadot-v0.9.4", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
parachain-staking = { branch = "master", default-features = false, git = "https://github.com/PureStake/moonbeam", optional = true }

# Polkadot

pallet-xcm = { branch = "release-v0.9.4", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
polkadot-parachain = { branch = "release-v0.9.4", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
xcm = { branch = "release-v0.9.4", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
xcm-builder = { branch = "release-v0.9.4", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
xcm-executor = { branch = "release-v0.9.4", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }

# Standalone

pallet-aura = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }

# Zeitgeist

zeitgeist-primitives = { default-features = false, path = "../primitives" }
zrml-court = { default-features = false, path = "../zrml/court" }
zrml-market-commons = { default-features = false, path = "../zrml/market-commons" }
zrml-orderbook-v1 = { default-features = false, path = "../zrml/orderbook-v1" }
zrml-prediction-markets = { default-features = false, path = "../zrml/prediction-markets" }
zrml-swaps = { default-features = false, path = "../zrml/swaps" }
zrml-swaps-runtime-api = { default-features = false, path = "../zrml/swaps/runtime-api" }

[features]
default = ["std"]
parachain = [
	# Cumulus

	"cumulus-pallet-dmp-queue",
	"cumulus-pallet-parachain-system",
	"cumulus-pallet-xcm",
	"cumulus-pallet-xcmp-queue",
	"cumulus-ping",
	"cumulus-primitives-core",
	"cumulus-primitives-utility",
	"parachain-info",

	# Parachain

	"nimbus-primitives",
	"pallet-author-inherent",
	"pallet-author-mapping",
	"pallet-author-slot-filter",
	"parachain-staking",

	# Polkadot

	"pallet-xcm",
	"polkadot-parachain",
	"xcm-builder",
	"xcm-executor",
	"xcm",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"zrml-court/runtime-benchmarks",
	"zrml-orderbook-v1/runtime-benchmarks",
	"zrml-prediction-markets/runtime-benchmarks",
	"zrml-swaps/runtime-benchmarks",
]
std = [
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"parity-scale-codec/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	# Benchmark

	"frame-benchmarking?/std",
	"frame-system-benchmarking?/std",

	# Cumulus

	"cumulus-pallet-dmp-queue?/std",
	"cumulus-pallet-parachain-system?/std",
	"cumulus-pallet-xcm?/std",
	"cumulus-pallet-xcmp-queue?/std",
	"cumulus-ping?/std",
	"cumulus-primitives-core?/std",
	"cumulus-primitives-utility?/std",
	"parachain-info?/std",

	# Parachain

	"nimbus-primitives?/std",
	"pallet-author-inherent?/std",
	"pallet-author-mapping?/std",
	"pallet-author-slot-filter?/std",
	"parachain-staking?/std",

	# Polkadot

	"pallet-xcm?/std",
	"polkadot-parachain?/std",
	"xcm-builder?/std",
	"xcm-executor?/std",
	"xcm?/std",

	# Standalone

	"pallet-aura/std",
	"pallet-grandpa/std",
	"sp-consensus-aura/std",
	"sp-finality-grandpa/std",

	# Zeitgeist

	"zeitgeist-primitives/std",
	"zrml-court/std",
	"zrml-market-commons/std",
	"zrml-orderbook-v1/std",
	"zrml-prediction-markets/std",
	"zrml-swaps-runtime-api/std",
	"zrml-swaps/std",
]

[package]
authors = ['Zeitgeist PM <contact@zeitgeist.pm>']
edition = "2018"
name = "zeitgeist-runtime"
version = "0.1.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
