[build-dependencies]
substrate-wasm-builder = { branch = "moonbeam-polkadot-v0.9.10", git = "https://github.com/purestake/substrate" }

[dependencies]
frame-executive = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
frame-support = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
frame-system = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
frame-system-rpc-runtime-api = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
log = { version = "0.4.14", default-features = false, optional = true }
orml-currencies = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/PureStake/open-runtime-module-library" }
orml-tokens = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/PureStake/open-runtime-module-library" }
orml-traits = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/PureStake/open-runtime-module-library" }
pallet-balances = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-collective = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-identity = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-membership = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-randomness-collective-flip = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-sudo = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-timestamp = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-transaction-payment = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-transaction-payment-rpc-runtime-api = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-treasury = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-utility = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
parity-scale-codec = { default-features = false, features = ["derive"], version = "2.0" }
sp-api = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-block-builder = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-core = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-inherents = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-offchain = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-runtime = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-session = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-transaction-pool = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-version = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
substrate-fixed = { default-features = false, features = ["serde"], git = "https://github.com/encointer/substrate-fixed" }

# Benchmark

frame-benchmarking = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate", optional = true }
frame-system-benchmarking = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate", optional = true }
hex-literal = { default-features = false, optional = true, version = "0.3" }

# Cumulus

cumulus-pallet-dmp-queue = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-pallet-parachain-system = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-pallet-xcm = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-pallet-xcmp-queue = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-primitives-core = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-primitives-timestamp = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
cumulus-primitives-utility = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
parachain-info = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }

# Parachain

nimbus-primitives = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
pallet-author-inherent = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
pallet-author-mapping = { branch = "master", default-features = false, git = "https://github.com/PureStake/moonbeam", optional = true }
pallet-author-slot-filter = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/cumulus", optional = true }
pallet-crowdloan-rewards = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/PureStake/crowdloan-rewards", optional = true }
parachain-staking = { branch = "master", default-features = false, git = "https://github.com/PureStake/moonbeam", optional = true }

# Polkadot

pallet-xcm = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/polkadot", optional = true }
polkadot-parachain = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/polkadot", optional = true }
xcm = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/polkadot", optional = true }
xcm-builder = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/polkadot", optional = true }
xcm-executor = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/polkadot", optional = true }

# Standalone

pallet-aura = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
pallet-grandpa = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-consensus-aura = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }
sp-finality-grandpa = { branch = "moonbeam-polkadot-v0.9.10", default-features = false, git = "https://github.com/purestake/substrate" }

# Zeitgeist

zeitgeist-primitives = { default-features = false, path = "../primitives" }
zrml-authorized = { default-features = false, path = "../zrml/authorized" }
zrml-court = { default-features = false, path = "../zrml/court" }
zrml-liquidity-mining = { default-features = false, path = "../zrml/liquidity-mining" }
zrml-market-commons = { default-features = false, path = "../zrml/market-commons" }
zrml-prediction-markets = { default-features = false, path = "../zrml/prediction-markets" }
zrml-rikiddo = { default-features = false, path = "../zrml/rikiddo" }
zrml-simple-disputes = { default-features = false, path = "../zrml/simple-disputes" }
zrml-swaps = { default-features = false, path = "../zrml/swaps" }
zrml-swaps-runtime-api = { default-features = false, path = "../zrml/swaps/runtime-api" }

[features]
default = ["std"]
parachain = [
	# Cumulus

	"cumulus-pallet-dmp-queue",
	"cumulus-pallet-parachain-system",
	"cumulus-pallet-xcm",
	"cumulus-pallet-xcmp-queue",
	"cumulus-primitives-core",
	"cumulus-primitives-timestamp",
	"cumulus-primitives-utility",
	"parachain-info",

	# Parachain

	"nimbus-primitives",
	"pallet-author-inherent",
	"pallet-author-mapping",
	"pallet-author-slot-filter",
	"pallet-crowdloan-rewards",
	"parachain-staking",

	# Polkadot

	"pallet-xcm",
	"polkadot-parachain",
	"xcm-builder",
	"xcm-executor",
	"xcm",
]
runtime-benchmarks = [
	"pallet-identity/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "hex-literal",
    "pallet-balances/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "zrml-authorized/runtime-benchmarks",
    "zrml-court/runtime-benchmarks",
    "zrml-liquidity-mining/runtime-benchmarks",
    "zrml-prediction-markets/runtime-benchmarks",
    "zrml-simple-disputes/runtime-benchmarks",
    "zrml-swaps/runtime-benchmarks",
]
std = [
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-identity/std",
	"pallet-membership/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"parity-scale-codec/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-fixed/std",

	# Benchmark

	"frame-benchmarking?/std",
	"frame-system-benchmarking?/std",

	# Cumulus

	"cumulus-pallet-dmp-queue?/std",
	"cumulus-pallet-parachain-system?/std",
	"cumulus-pallet-xcm?/std",
	"cumulus-pallet-xcmp-queue?/std",
	"cumulus-primitives-core?/std",
	"cumulus-primitives-timestamp?/std",
	"cumulus-primitives-utility?/std",
	"parachain-info?/std",

	# Parachain

	"nimbus-primitives?/std",
	"pallet-author-inherent?/std",
	"pallet-author-mapping?/std",
	"pallet-author-slot-filter?/std",
	"pallet-crowdloan-rewards?/std",
	"parachain-staking?/std",

	# Polkadot

	"pallet-xcm?/std",
	"polkadot-parachain?/std",
	"xcm-builder?/std",
	"xcm-executor?/std",
	"xcm?/std",

	# Standalone

	"pallet-aura/std",
	"pallet-grandpa/std",
	"sp-consensus-aura/std",
	"sp-finality-grandpa/std",

	# Zeitgeist

	"zeitgeist-primitives/std",
	"zrml-authorized/std",
	"zrml-court/std",
	"zrml-liquidity-mining/std",
	"zrml-market-commons/std",
	"zrml-prediction-markets/std",
	"zrml-rikiddo/std",
	"zrml-simple-disputes/std",
	"zrml-swaps-runtime-api/std",
	"zrml-swaps/std",
]
txfilter = [
	"log"
]

[package]
authors = ['Zeitgeist PM <contact@zeitgeist.pm>']
edition = "2018"
name = "zeitgeist-runtime"
version = "0.2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
